envoy.yaml
static_resources:
  clusters:
  - lb_policy: round_robin
    load_assignment:
      cluster_name: cluster1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.43.164.229
                port_value: 8080
          load_balancing_weight: 200
        - endpoint:
            address:
              socket_address:
                address: 10.43.248.217
                port_value: 8080
          load_balancing_weight: 200
        - endpoint:
            address:
              socket_address:
                address: 10.43.238.40
                port_value: 8080
          load_balancing_weight: 200
        - endpoint:
            address:
              socket_address:
                address: 10.43.246.133
                port_value: 8080
          load_balancing_weight: 200
        - endpoint:
            address:
              socket_address:
                address: 10.43.17.210
                port_value: 8080
          load_balancing_weight: 200
    max_requests_per_connection: 1
    name: cluster1
    type: static
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: '9000'
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - domains:
              - '*'
              name: local_service
              routes:
              - match:
                  prefix: /
                route:
                  weighted_clusters:
                    clusters:
                    - name: cluster1
                      weight: 100
                    runtime_key_prefix: routing.traffic_split.service
          stat_prefix: svc
    name: http
